force-app/main/default/objects/Equipo_de_Resolutores__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Estado (Status) del Case durante el tramo de custodia. Permite medir tiempo efectivo por estado y por consultor, comparable con el evento clave del estado.</description>
    <label>Estado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>