force-app/main/default/objects/Equipo_de_Resolutores__c/fields/Estado_Completado__c.field-meta.xml
<CustomField>
    <fullName>Estado_Completado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica que el tramo de custodia cerró porque el estado del ticket (hito SLA) se completó.</description>
    <label>Estado Completado</label>
    <type>Checkbox</type>
</CustomField>