force-app/main/default/objects/Equipo_de_Resolutores__c/fields/Motivo_Cierre__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Cierre__c</fullName>
    <description>Motivo registrado al transferir o liberar la custodia del tramo. Auditoria de handoffs.</description>
    <label>Motivo de cierre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>