force-app/main/default/objects/Equipo_de_Resolutores__c/fields/Pausa_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Pausa_Inicio__c</fullName>
    <description>Marca de tiempo en que se detuvo el SLA (Case.IsStopped) para el tramo de custodia abierto. Vacio = no esta en pausa.</description>
    <label>Pausa inicio</label>
    <type>DateTime</type>
</CustomField>