force-app/main/default/objects/Equipo_de_Resolutores__c/fields/Tiempo_Efectivo_Min__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_Efectivo_Min__c</fullName>
    <description>Minutos efectivos del tramo (bruto menos pausas) calculados al cerrar la custodia. Base para reportes y dashboards de SLA por consultor.</description>
    <label>Tiempo efectivo (min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>