force-app/main/default/objects/Equipo_de_Resolutores__c/fields/Tiempo_Pausado_Min__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_Pausado_Min__c</fullName>
    <description>Minutos pausados acumulados del tramo de custodia (suma de periodos con SLA detenido). Se descuenta del tiempo efectivo.</description>
    <label>Tiempo pausado (min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>